--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "build": "yarn; npx prisma generate"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
@@ -17,6 +18,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0"
+    "@pothos/core": "^3.24.0",
+    "@pothos/plugin-prisma": "^3.40.1",
+    "@prisma/client": "^4.9.0",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.1",
+    "graphql-yoga": "^3.3.0"
   }
 }
